# AgentsCouncil

./: .cursorrules  .editorconfig  .env.example  .gitignore  AGENTS.md  AUTHPLAN.md  CONTRIBUTING.md  README.md  ralph-loop.local.md  start_ollama.sh
.agent/rules/: project-rules.md
.github/workflows/: ci.yml
backend/: .env.example  README.md  pyproject.toml  requirements.txt  verify_tools_full.py
backend/app/: __init__.py  auth.py  config.py  db.py  main.py  models.py  oauth_accounts.py  oauth_server.py  storage.py  storage_supabase.py
backend/app/api/: __init__.py  auth.py  councils.py  debates.py  websocket.py
backend/app/api/endpoints/: providers.py
backend/app/core/: __init__.py  debate_engine.py  moderator.py
backend/app/prompts/: devils_advocate.txt  investment_advisor.txt  legal_advisor.txt  politics_expert.txt  pr_expert.txt  stance_directive.txt  tech_strategist.txt
backend/app/providers/: __init__.py  anthropic_provider.py  base.py  gemini_provider.py  google_oauth_provider.py  ollama_provider.py  openai_provider.py
backend/app/templates/: oauth_callback.html
backend/app/tools/: __init__.py  registry.py  stock_tools.py
backend/data/: storage.json
backend/tests/: __init__.py  conftest.py  test_api.py  test_auth_claim.py  test_auth_context.py  test_debate_engine.py  test_google_oauth_provider.py  test_models.py  test_moderator.py  test_moderator_prompts.py  test_oauth_account_endpoints.py  test_oauth_accounts.py  test_oauth_browser_callback.py  test_oauth_endpoints.py  test_oauth_server_defaults.py  test_ollama_defaults.py  test_ollama_provider.py  test_providers.py  test_settings.py  test_stock_tools.py  test_storage.py  test_storage_supabase.py  test_token_refresh.py  test_tool_registry.py
frontend/: README.md  analysis_options.yaml  pubspec.yaml
frontend/lib/: main.dart
frontend/lib/app/: config.dart  (+1 more)
frontend/test/: widget_test.dart
frontend/web/: index.html  manifest.json
scripts/: setup_dev.sh
(+34 files in other folders)
